--- a/example/index.html
+++ b/example/index.html
@@ -15,7 +15,7 @@
 		<tr>
 			<td>Amount of the loan($):</td>
 			<td>
-				<input id="amount" onchange="calculate();">
+				<input id="amount">
 			</td>
 			<td rowspan="8">
 				<canvas id="graph" width="400" height="250"></canvas>
@@ -24,19 +24,19 @@
 		<tr>
 			<td>Annual interest(%):</td>
 			<td>
-				<input id="apr" onchange="calculate();">
+				<input id="apr">
 			</td>
 		</tr>
 		<tr>
 			<td>Repayment period(years):</td>
 			<td>
-				<input id="years" onchange="calculate();">
+				<input id="years">
 			</td>
 		</tr>
 		<tr>
 			<td>Zipcode (to find lenders):</td>
 			<td>
-				<input id="zipcode" onchange="calculate();">
+				<input id="zipcode">
 			</td>
 		</tr>
 		<tr>
